added html contents and css stylings

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
-    
-</body>
-</html>
+    <section>
+      <nav>
+        <a href="#" class="logo">O Reagan</a>
+        <ul>
+            <li><a href="home" class="Active">Home</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="contact me">Contact Me</a></li>  
+        </ul>
+      </nav>
+      <div class="text-container">
+        <p>Hello!</p>
+        <p></p>
+        <p>I'M am OWITI REAGAN</p>
+        <P>I am a website developer at moringa school!</P>
+        <button class="Hire-btn">Hire Me</button>
+      </div>
+      </section>
+            
