added background image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>Hello!</p>
         <p></p>
         <p>I'M am OWITI REAGAN</p>
-        <P>I am a website developer at moringa school!</P>
+        <P>I am a website developer & a web designer at moringa school!</P>
         <button class="Hire-btn">Hire Me</button>
       </div>
       </section>
