added some css rules and a imge in html

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       </nav>
       <div class="text-container">
         <p>Hello!</p>
-        <p></p>
-        <p>I'M am OWITI REAGAN</p>
+        <p>I'M <span>REAGAN</span></p>
         <P>I am a website developer & a web designer at moringa school!</P>
         <button class="Hire-btn">Hire Me</button>
       </div>
+      <img src="images/reagan.jpeg"  class="model" alt="Reagan">
       </section>
             
