styled in the css

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <P>I am a website developer & a web designer at moringa school!</P>
         <button class="Hire-btn">Hire Me</button>
       </div>
-      <img src="images/reagan.jpeg"  class="model" alt="Reagan">
+      <img src="images/reagan.jpeg"  class="model" alt="model">
       </section>
             
