added div in html file and styled in css

--- a/index.html
+++ b/index.html
@@ -25,4 +25,14 @@
       </div>
       <img src="images/reagan.jpeg"  class="model" alt="model">
       </section>
+      <div class="about-container">
+        <img src="images/reagan.jpeg">
+        <div class="about-text">
+          <p></p>
+          <p></p>
+          <p></p>
+          <p></p>
+          <p></p>
+        </div>
+      </div>
             
