--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="home" class="Active">Home</a></li>
             <li><a href="about">About</a></li>
+            <li><a href="projects">projects</a></li>
             <li><a href="contact me">Contact Me</a></li>  
         </ul>
       </nav>
@@ -28,11 +29,26 @@
       <div class="about-container">
         <img src="images/reagan.jpeg">
         <div class="about-text">
-          <p></p>
-          <p></p>
-          <p></p>
-          <p></p>
-          <p></p>
+          <p>About Me</p>
+          <p>Web Developer & designer</p>
+          <p>Hello,My name is Owiti Reagan.I am a developer and also a designer but still <span class="color">LEARNING</span>.I am cuurently 
+          doing my programming studies  at moringa school.</p>
+          <h3>Education Background</h3>
+          <p>
+          <ol>
+          <li>I went to OLYMPIC HIGH SCHOOL and that is where i did my form 4 exams way back in 2017.</li>
+          <li>I  am still learning and focused to gradute for the course.</li>
+          <li>I i have always dreamed of being a programmer and that is actually what pushed me to do programming.</li>
+          </ol>
+          </p>
+          <h4>My Hobbies</h4>
+          <p>
+            <ul style="list-style-type:circle">
+              <li>I love bicycle riding,just to stretch my body.</li>
+              <li>listening to music is also my thing and it mainly helps me in relaxing my mind.</li>
+              <li>Eating!It sound's wired but i really love food.</li>
+            </ul>
+          </p>
         </div>
       </div>
             
