created a div class projects in html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="home" class="Active">Home</a></li>
             <li><a href="about">About</a></li>
             <li><a href="projects">projects</a></li>
-            <li><a href="contact me">Contact Me</a></li>  
+            <li><a href="contact">Contact</a></li>  
         </ul>
       </nav>
       <div class="text-container">
@@ -36,7 +36,7 @@
           <h3>Education Background</h3>
           <p>
           <ol>
-          <li>I went to OLYMPIC HIGH SCHOOL and that is where i did my form 4 exams way back in 2017.</li>
+          <li>I went to <span>OLYMPIC HIGH SCHOOL</span>and that is where i did my form 4 exams way back in 2017.</li>
           <li>I  am still learning and focused to gradute for the course.</li>
           <li>I i have always dreamed of being a programmer and that is actually what pushed me to do programming.</li>
           </ol>
@@ -49,6 +49,11 @@
               <li>Eating!It sound's wired but i really love food.</li>
             </ul>
           </p>
+        </div>
+      </div>
+      <div class="projects">
+        <div class="project-text">
+          
         </div>
       </div>
             
