--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="projects">
         <div class="project-text">
-          
+          <h1>Projects Created</h1>
         </div>
       </div>
             
