added h2 in div class projects

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <div class="projects">
         <div class="project-text">
           <h1>Projects Created</h1>
+          <h2>This are the links to the projects have created so far</h2>
         </div>
       </div>
             
