--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <div class="project-text">
           <h1>Projects Created</h1>
           <h2>This are the links to the projects have created so far</h2>
+          <ul style="list-style-type:disc">
+            <li></li>
+          </ul>
         </div>
       </div>
             
