added h3 added paragraph and ul in div class project

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         <div class="project-text">
           <h1>Projects Created</h1>
           <h2>This are the links to the projects have created so far</h2>
+          <h3>Restaurant Website</h3>
+          <p>It gives you easy time to buy food by just ordering from the restaurant while at home.</p>
           <ul style="list-style-type:disc">
-            <li></li>
-          </ul>
-        </div>
+            <li>https://reagan2020.github.io/Restaurant-webpage/</li> </ul>
+                 </div>
       </div>
             
