added 2 other paragraphs and a ul with a link

--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
           <h2>This are the links to the projects have created so far</h2>
           <h3>Restaurant Website</h3>
           <p>It gives you easy time to buy food by just ordering from the restaurant while at home.</p>
+          <p>There is the live link for the restaurant</p>
           <ul style="list-style-type:disc">
             <li>https://reagan2020.github.io/Restaurant-webpage/</li> </ul>
-                 </div>
+            <h4>my first website</h4>
+            <p>This one i did while still learning</p>
+            <p>There is the live link for my first website</p>
+            <ul><li>https://reagan2020.github.io/my-first-website/</li></ul>
+        </div>
       </div>
             
