--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <ol>
           <li>I went to <span>OLYMPIC HIGH SCHOOL</span>and that is where i did my form 4 exams way back in 2017.</li>
           <li>I  am still learning and focused to gradute for the course.</li>
-          <li>I i have always dreamed of being a programmer and that is actually what pushed me to do programming.</li>
+          <li>I  have always dreamed of being a programmer and that is actually what pushed me to do programming.</li>
           </ol>
           </p>
           <h4>My Hobbies</h4>
@@ -49,6 +49,7 @@
               <li>Eating!It sound's wired but i really love food.</li>
             </ul>
           </p>
+          <button class="Hire-btn">Hire Me</button>
         </div>
       </div>
       <div class="projects">
@@ -58,12 +59,11 @@
           <h3>Restaurant Website</h3>
           <p>It gives you easy time to buy food by just ordering from the restaurant while at home.</p>
           <p>There is the live link for the restaurant</p>
-          <ul style="list-style-type:disc">
-            <li>https://reagan2020.github.io/Restaurant-webpage/</li> </ul>
+            <a href="https://reagan2020.github.io/Restaurant-webpage/"></a>
             <h4>my first website</h4>
             <p>This one i did while still learning</p>
             <p>There is the live link for my first website</p>
-            <ul><li>https://reagan2020.github.io/my-first-website/</li></ul>
+            <a href="https://reagan2020.github.io/my-first-website/"></a>
         </div>
       </div>
             
