added stylings on css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="project-text">
           
           <h1>Projects Created</h1>
-          <h2>This are the links to the projects i have created so far</h2>
+          <h2>This are the links to the projects i have created so far.</h2>
           <h3>Restaurant Website</h3>
           <p>It gives you easy time to buy food by just ordering from the restaurant while at home.
             Here is the live link for the restaurant web page
