added backgrount image and styled in css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="home" class="Active">Home</a></li>
             <li><a href="about">About</a></li>
             <li><a href="projects">projects</a></li>
-            <li><a href="contacts">Contacts</a></li> 
+            <li><a href="contacts">Contact Me</a></li> 
             <li><a href="services">Services</a></li>  
         </ul>
       </nav>
@@ -57,7 +57,6 @@
       <!-- projects------>
       <div class="projects">
         <div class="project-text">
-          
           <h1>Projects Created</h1>
           <h2>This are the links to the projects i have created so far.</h2>
           <h3>Restaurant Website</h3>
@@ -70,4 +69,8 @@
             <ul style="list-style-type:disc"><button><li><a href="https://reagan2020.github.io/my-first-website/">My first website link</a></button></li></ul>
           </div>
       </div>
-     
+     <!-- contacts me -->
+     <div class="contact-me">
+       <p>If you have any project in mind,don't hesitate to call.</p>
+       <button>Contact Me</button>
+     </div>
