added footer in html

--- a/index.html
+++ b/index.html
@@ -74,3 +74,15 @@
        <p>If you have any project in mind,don't hesitate to call.</p>
        <button>Contact Me</button>
      </div>
+     <!-- footer -->
+     <footer>
+       <p>O Reagan</p>
+       <p>I'll make your website and deliver just the way you requested.</p>
+       <div class="social-icons">
+         <a href=""></a>
+         <a href=""></a>
+         <a href=""></a>
+         <a href=""></a>
+       </div>
+       <p>Copyright by Going-O Reagan</p>
+     </footer>
