added icons and styled in the css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/1f5f5626b5.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
@@ -16,7 +17,6 @@
             <li><a href="about">About</a></li>
             <li><a href="projects">projects</a></li>
             <li><a href="contacts">Contact Me</a></li> 
-            <li><a href="services">Services</a></li>  
         </ul>
       </nav>
       <div class="text-container">
@@ -71,7 +71,19 @@
       </div>
      <!-- contacts me -->
      <div class="contact-me">
+       <h1>Contact Me</h1>
        <p>If you have any project in mind,don't hesitate to call.</p>
+       <div class="col-md-6 d-flex align-items-center">
+        <p class="mb-0 phone pl-md-2">
+            <a href="#" class="mr-2">
+                <i class="fas fa-phone mr-1"></i>
+                +254717307127
+            </a>
+            <a href="#"><i class="fas fa-paper-plane mr-1"></i>
+               reaganteflon@gmail.com
+           </a>
+        </p>
+    </div>
        <button>Contact Me</button>
      </div>
      <!-- footer -->
@@ -79,10 +91,21 @@
        <p>O Reagan</p>
        <p>I'll make your website and deliver just the way you requested.</p>
        <div class="social-icons">
-         <a href=""></a>
-         <a href=""></a>
-         <a href=""></a>
-         <a href=""></a>
+         <a href="#"><i class="fab fa-facebook"></i></a>
+         <a href="#"><i class="fab fa-twitter"></i></a>
+         <a href="#"><i class="fab fa-instagram"></i></a>
+         <a href="#"><i class="fab fa-youtube"></i></a>
        </div>
-       <p>Copyright by Going-O Reagan</p>
+       <div class="col-md-6 d-flex align-items-center">
+        <p class="mb-0 phone pl-md-2">
+            <a href="#" class="mr-2">
+                <i class="fas fa-phone mr-1"></i>
+                +254717307127
+            </a>
+            <a href="#"><i class="fas fa-paper-plane mr-1"></i>
+               reaganteflon@gmail.com
+           </a>
+        </p>
+    </div>
+       <p class="copyright">Copyright by Going-<span>O Reagan</span></p>
      </footer>
