added paragrahp and ul

--- a/index.html
+++ b/index.html
@@ -63,9 +63,15 @@
           <p>It gives you easy time to buy food by just ordering from the restaurant while at home.
             Here is the live link for the restaurant web page
           </p>
+          <p>languages used</p>
+          <ol><li>html</li></ol>
+          <ol><li>css</li></ol>
            <ul style="list-style-type:disc"><button><li><a href="https://reagan2020.github.io/Restaurant-webpage/">Restaurant link</a></button></li></ul>
            <h3>my first website</h3>
             <p>This one i did while still learning.Here is the live link for my first website</p>
+            <p>languages used</p>
+            <ol><li>html</li></ol>
+            <ol><li>css</li></ol>
             <ul style="list-style-type:disc"><button><li><a href="https://reagan2020.github.io/my-first-website/">My first website link</a></button></li></ul>
           </div>
       </div>
