changed the nav section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <nav>
         <a href="#" class="logo">O Reagan</a>
         <ul>
-            <li><a href="home" class="Active">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="projects">projects</a></li>
-            <li><a href="contacts">Contact Me</a></li> 
+            <li><a href="#" class="Active">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">projects</a></li>
+            <li><a href="#">Contact Me</a></li> 
         </ul>
       </nav>
       <div class="text-container">
@@ -89,11 +89,11 @@
                reaganteflon@gmail.com
            </a>
         </p>
-    </div>
+     </div>
        <button>Contact Me</button>
      </div>
      <!-- footer -->
-     <footer>
+      <footer>
        <p>O Reagan</p>
        <p>I'll make your website and deliver just the way you requested.</p>
        <div class="social-icons">
@@ -102,7 +102,7 @@
          <a href="#"><i class="fab fa-instagram"></i></a>
          <a href="#"><i class="fab fa-youtube"></i></a>
        </div>
-       <div class="col-md-6 d-flex align-items-center">
+      <div class="col-md-6 d-flex align-items-center">
         <p class="mb-0 phone pl-md-2">
             <a href="#" class="mr-2">
                 <i class="fas fa-phone mr-1"></i>
